Update 'rrmc2h7ev-python' component image to: rhtap-quay-quay-rhtap-quay.apps.clusterpool-8rp5t.rhtap.devcluster.openshift.com/rhtap/rhtap-qe-python:1b3f1ddf5fc1c827f6e90d70720367addaa09d6a@sha256:cd650683c95f1e33d99f3497ae4bbe573a4b9fbca32c59527b36bdee2811a8c8

--- a/components/rrmc2h7ev-python/overlays/development/deployment-patch.yaml
+++ b/components/rrmc2h7ev-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rrmc2h7ev-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.clusterpool-8rp5t.rhtap.devcluster.openshift.com/rhtap/rhtap-qe-python:1b3f1ddf5fc1c827f6e90d70720367addaa09d6a@sha256:cd650683c95f1e33d99f3497ae4bbe573a4b9fbca32c59527b36bdee2811a8c8
+          name: container-image
